# tageditor

./: .gitignore  CLAUDE.md  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/models/: schemas.py
backend/app/services/: repository.py  tags.py  thumbnails.py
backend/tests/: test_repository.py  test_tags.py
docs/design/: api-spec.md  data-model.md  detailed-design.md  requirements.md  test-plan.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CategoryTree.tsx  DetailView.tsx  ImageGrid.tsx  TagEditorPanel.tsx  TagStatsPanel.tsx
frontend/src/lib/: api.ts
frontend/src/types/: models.ts
